Added the fragments_add_expenses.xml and the corresponding textview style property This is not the final draft however it is perfectly functional just aesthetically displeasing

--- a/SpendSmart/app/src/main/res/values/strings.xml
+++ b/SpendSmart/app/src/main/res/values/strings.xml
@@ -18,4 +18,9 @@
     <!-- Placeholders -->
     <string name="hint_amount">0.00</string>
     <string name="budget_remaining">Remaining Budget</string>
+
+    <!-- Lee's -->
+    <string name="title_add_expense">Add Expense</string>
+
+
 </resources>
