--- a/SpendSmart/app/src/main/res/values/strings.xml
+++ b/SpendSmart/app/src/main/res/values/strings.xml
@@ -19,9 +19,9 @@
     <string name="hint_amount">0.00</string>
     <string name="budget_remaining">Remaining Budget</string>
 
-    <!-- Lee's -->
     <!-- Add Expense -->
     <string name="title_add_expense">Add Expense</string>
+
     <!-- Dashboard -->
     <string name="remaining_balance">Remaining Balance: $0.00</string>
     <string name="recent_transactions">Recent Transactions</string>
@@ -39,9 +39,14 @@
     <!-- Insights -->
     <string name="no_transactions">No Transactions yet</string>
 
-
-
-
-
+    <!-- ✅ IMPORTANT: Spinner Categories -->
+    <string-array name="categories">
+        <item>Select Category</item>
+        <item>Food</item>
+        <item>Transport</item>
+        <item>Shopping</item>
+        <item>Bills</item>
+        <item>Entertainment</item>
+    </string-array>
 
 </resources>
