--- a/SpendSmart/app/src/main/res/values/strings.xml
+++ b/SpendSmart/app/src/main/res/values/strings.xml
@@ -39,6 +39,15 @@
     <!-- Insights -->
     <string name="no_transactions">No Transactions yet</string>
 
+    <!-- Validation Error Messages -->
+    <string name="error_amount_empty">Please enter an amount</string>
+    <string name="error_amount_invalid">Please enter a valid positive amount</string>
+    <string name="error_category_not_selected">Please select a category</string>
+
+    <!-- Currency Formatting -->
+    <string name="currency_prefix">KSh</string>
+    <string name="currency_format">KSh %s</string>
+
     <!-- ✅ IMPORTANT: Spinner Categories -->
     <string-array name="categories">
         <item>Select Category</item>
